# RediSearch

./: .buckconfig  .clang-format  .dockerignore  .gdb_history  .git-blame-ignore-revs  .gitignore  .gitmodules  .install  .lgtm.yml  .nextest-version  .rust-nightly  .spellcheck.yml  .swamp.yaml  .travis.yml  404.html  AGENTS.md  Administration.html  Aggregations.html  BUCK  BUILD_SUMMARY.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.1  CNAME  CONTRIBUTING.md  Chinese.html  Clients.html  Commands.html  Configuring.html  DESIGN.html  DESIGN.md  Dockerfile  Dockerfile.travis  ERROR_MESSAGE_PREFIXES.md  Escaping.html  Extensions.html  FT_CURSOR_READ_RETURN_STRICT_RESEND_RACE.md  FT_CURSOR_READ_SHARD_BLOCKED_CLIENT_TIMEOUT_PLAN.md  FT_CURSOR_READ_TIMEOUT_RETURN_STRICT_DESIGN_NEW.md  Highlight.html  (+103 more)
cmake/vecsim/: CMakeLists.txt
coord/: CMakeLists.txt
coord/docs/: COMMANDS.md  README.md  RLEC.md
coord/pack/: ramp.yml
coord/src/: CMakeLists.txt  cluster_spell_check.c  cluster_spell_check.h  config.c  config.h  coord_module.h  crc12_tags.h  crc16_tags.h  debug_command_names.h  debug_commands.c  debug_commands.h  dist_aggregate.c  dist_plan.cpp  dist_plan.h  dist_profile.h  dist_utils.c  dist_utils.h  fnv32.c  fnv32.h  info_command.c  info_command.h  module.c  partition.c  partition.h  rpnet.c  rpnet.h  search_cluster.c  search_cluster.h  shard_window_ratio.h  special_case_ctx.h
disk/: CMakeLists.txt  block_util.h  column.cpp  column.h  database.cpp  database.h  database_api.cpp  database_api.h  document.h  document_id.cpp  document_id.h  expose_api.c  expose_api.cpp  expose_api.h  index_iterator_adapter.h  iterator_utils.h  memory_object.cpp  memory_object.h
disk/doc_table/: doc_table_disk.cpp  doc_table_disk.hpp  doc_table_disk_c.cpp  doc_table_disk_c.h
disk/document_metadata/: document_metadata.cpp  document_metadata.hpp
disk/inverted_index/: deleted_ids_compaction_filter.cpp  deleted_ids_compaction_filter.h  entry_metadata.h  inverted_index.cpp  inverted_index.h  inverted_index_api.cpp  inverted_index_api.h  merge_operator.cpp  merge_operator.h
flow-tests/: .gitignore  common.py  conftest.py  pyproject.toml  runtests.py  test_async_io.py  test_basic.py  test_compaction.py  test_debug.py  test_delete_document.py  test_disk_path.py  test_drop.py  test_expire_document.py  test_info_metrics_basic.py  test_rdb.py  test_scoring.py  test_throttle.py  test_vecsim_disk.py  test_wildcard.py  vecsim_common.py
flow-tests/features/: async_io.feature  basic.feature  compaction.feature  debug.feature  delete_document.feature  drop.feature  expire_document.feature  rdb.feature  scoring.feature  wildcard.feature
flow-tests/steps/: __init__.py  async_io_steps.py  basic_steps.py  compaction_steps.py  debug_steps.py  delete_document_steps.py  drop_steps.py  expire_document_steps.py  rdb_steps.py  scoring_steps.py
fuzzing/: Cargo.toml  README.md
fuzzing/seeds/: seed-000  seed-001  seed-002  seed-003  seed-004  seed-005  seed-006  seed-007  seed-008  seed-009  seed-010  seed-011  seed-012  seed-013  seed-014  seed-015  seed-016  seed-017  seed-018  seed-019  seed-020  seed-021  seed-022  seed-023  seed-024  seed-025  seed-026  seed-027  seed-028  seed-029  seed-030  seed-031  seed-032  seed-033  seed-034  seed-035  seed-036  seed-037  seed-038  seed-039  (+8 more)
fuzzing/src/: artifact.rs  ast.rs  driver.rs  harness.rs  lower.rs  main.rs  op.rs  oracles.rs  repro.rs  server.rs  shadow.rs  swarm.rs
redisearch_disk/: AGENTS.md  CMakeLists.txt  Cargo.toml  build.rs
redisearch_disk/benches/: doc_table.rs  document_id_key.rs  document_metadata.rs  inverted_index.rs
redisearch_disk/src/: database.rs  disk_context.rs  document_id_key.rs  index_spec.rs  info_sink.rs  key_traits.rs  lib.rs  merge_op.rs  metrics.rs  path_prefix.rs  search_disk.rs  utils.rs  value_traits.rs  vecsim_disk.rs
redisearch_disk/tests/: archived_block.rs  disk_context.rs  doc_table.rs  document_flags.rs  index_spec.rs  inverted_index.rs
src/buffer/: CMakeLists.txt  buffer.c  buffer.h
src/c2rust/: CMakeLists.txt  Readme.md  variadic_helper.c  variadic_helper_for_rust.h  variadic_helper_from_rust.h
src/c_utils/: CMakeLists.txt  api_stubs.c  api_stubs.h  apibench.cpp  sizes.cpp
src/coord/: CMakeLists.txt  cluster_spell_check.c  cluster_spell_check.h  config.c  config.h  coord_bg.c  coord_bg.h  coord_module.h  coord_request_ctx.c  coord_request_ctx.h  debug_command_names.h  debug_commands.c  debug_commands.h  dist_aggregate.c  dist_plan.cpp  dist_plan.h  dist_plan_utils.cpp  dist_plan_utils.h  dist_profile.c  dist_profile.h  dist_utils.c  dist_utils.h  info_command.c  info_command.h  module.c  rpnet.c  rpnet.h  rpnet_async.c  rpnet_async.h  score_explain_mr.c  score_explain_mr.h  shard_barrier.c  shard_barrier.h  special_case_ctx.h
src/cpptests/: CMakeLists.txt  common.cpp  common.h  redismock-internal.h  redismock.cpp  redismock.h  t_agg.cpp  t_arr.cpp  t_document.cpp  t_expr.cpp  t_extensions.cpp  t_forkgc.cpp  t_index.cpp  t_llapi.cpp  t_query.cpp  t_range.cpp  t_resultprocessor.cpp  t_rlookup.cpp  t_rules.cpp  t_tagindex.cpp  t_tokenizer.cpp  t_trie.cpp  t_value.cpp
src/geometry/: CMakeLists.txt  Makefile  allocator.hpp  generator.cc  geometry.h  geometry_api.c  geometry_api.cpp  geometry_api.h  geometry_types.h  in.geometry  point.cpp  point.h  point.hpp  polygon.cpp  polygon.h  polygon.hpp  query_iterator.cpp  query_iterator.h  query_iterator.hpp  rtdoc.cpp  rtdoc.h  rtdoc.hpp  rtree.cpp  rtree.h  rtree.hpp  s2point.hpp  s2polygon.hpp  test.c  wkt.cpp  wkt.h
src/hash/: CMakeLists.txt  hash.cpp  hash.h
src/index_result/: CMakeLists.txt  index_result.c  index_result.h
src/inverted_index/: CMakeLists.txt  index_result.c  inverted_index.c  inverted_index.h
src/iterators/: CMakeLists.txt  empty_iterator.c  empty_iterator.h  hybrid_reader.c  hybrid_reader.h  idlist_iterator.c  idlist_iterator.h  intersection_iterator.c  intersection_iterator.h  inverted_index_iterator.c  inverted_index_iterator.h  iterator_api.h  metric_iterator.c  (+15 more)
vecsim_disk/: .clang-format  AGENTS.md  CMakeLists.txt  STRUCTURE.md
(+4935 files in other folders)
